# meal-DAGs

./: .gitignore  AGENTS.md  README.md  airflow.cfg  airflow.db  meals.py  pyproject.toml  simple_auth_manager_passwords.json.generated
.github/workflows/: deploy.yaml
dags/meals/.github/workflows/: deploy.yml
dags/meals/_common/: config.py
dags/meals/_common/mongo_utils/: get_diets.py  get_future_meals.py  get_meals_per_day.py
dags/meals/daily_update/: dag_daily_update.py
dags/meals/notifications/: notifications.py
dags/meals/notifications/get_relevant_users/: extract_user_info.py  generate_notification_objects.py  get_relevant_users.py
dags/meals/notifications/mobile_notifications/: index.js  package-lock.json  package.json
dags/meals/notifications/send_emails/: index.js  package-lock.json  package.json
dags/meals/notifications/send_emails/src/: email.js  index.js
dags/meals/settings_sync/: dag_settings_sync.py
dags/meals/sheet_editor/: dag_sheet_editing.py  sheet_editing.py
dags/meals/sheet_editor/sheet_utils/: create_meal_diet_template.py  ensure_sheet_exists.py  get_last_sheet_row.py  get_service.py
dags/meals/sheet_editor/sheet_utils/create_meal_diet_template/: __init__.py  constants.py  data_preparation.py  formatting.py  grouping.py  summary_stats.py  template.py
